# CMIP7_DReq_Software

./: .gitignore  README.md  dev-environment.yml  env.yml  launch_test_with_coverage.sh  pip_install.yml  pyproject.toml  requirements.txt
.github/workflows/: pip_install.yml  publish2pypi.yml  updates.yml
data_request_api/: data_request.py  dump_transformation.py  test_api.py  vocabulary_server.py
data_request_api/command_line/: config.py  export_dreq_lists_json.py  get_variables_metadata.py
data_request_api/data_request_api/command_line/: compare_variables.py  config.py  estimate_dreq_volume.py  export_dreq_lists_json.py  get_variables_metadata.py
data_request_api/data_request_api/content/: consolidate_export.py  dreq_content.py  dump_transformation.py  mapping_table.py  transform.json
data_request_api/data_request_api/query/: data_request.py  dreq_classes.py  dreq_query.py  filtering.json  vocabulary_server.py
data_request_api/data_request_api/tests/: test_cli.py  test_config_cli.py  test_consolidation.py  test_data_request.py  test_decorator.py  test_dreq_content.py  test_dump_transformation.py  test_optimize.py  test_vocabulary_server.py
data_request_api/data_request_api/utilities/: config.py  decorators.py  parser.py
data_request_api/dev/JA/: check_plev_requests.py  workflow_example_GRtest.py  workflow_example_test.py
data_request_api/dev/MS/: dreq_content_and_walking_data_request.ipynb
data_request_api/stable/content/: README.MD  __init__.py  consolidate_export.py  dump_transformation.py  mapping_table.py
data_request_api/stable/query/: compare_variables_metadata.py  data_request.py  dreq_classes.py  dreq_query.py  get_variables_metadata.py  vocabulary_server.py
data_request_api/stable/transform/: data_request.py  dump_transformation.py  vocabulary_server.py
data_request_api/stable/utilities/: __init__.py  config.py  decorators.py  logger.py  tools.py
data_request_api/tests/: __init__.py  test_config.py  test_config_cli.py  test_data_request.py  test_decorator.py  test_dreq_content.py  test_dump_transformation.py  test_vocabulary_server.py
data_request_api/tests/test_datasets/: one_base_DR_dump.txt  one_base_VS_output.json  one_base_input.json  one_base_output_format.json  one_base_output_transform.json  several_bases_DR_output.json  several_bases_VS_output.json
dev-to-be-removed/JA/: workflow_example_test.py  write_cfsn_json.py
dev-to-be-removed/MM/: walking_data_request.ipynb
docs/data_request_api/: index.html
docs/data_request_api/command_line/: compare_variables.html  config.html  estimate_dreq_volume.html  export_dreq_lists_json.html  get_variables_metadata.html  index.html
docs/data_request_api/content/: consolidate_export.html  dreq_content.html  dump_transformation.html  mapping_table.html
notebooks/: HowTo-00_Install_the_DR_Software.ipynb  HowTo-01_Import_and_Load_the_DR.ipynb  HowTo-02_Discover_What_is_in_DR.ipynb  HowTo-03a_Find_Experiments_and_Variables_for_given_Opportunities.ipynb  HowTo-03b_Find_Experiments_and_Variables_for_given_Opportunities.ipynb  HowTo-04a_View_Attributes_of_Experiments_and_Variables.ipynb  HowTo-04b_View_Attributes_of_Variables.ipynb  HowTo-05_Apply_Various_Search_Critria.ipynb  workflow_example.ipynb
sandbox/GR/: data_request.py  dump_transformation.py  tools.py  vocabulary_server.py
sandbox/JA/: check_plev_requests.py  dreq_classes.py  dreq_query.py  env.yml  read_feedback_spreadsheet.py
sandbox/MM/: checksum.py
sandbox/MS/: dreq_content_and_walking_data_request.ipynb  requirements.txt
sandbox_ms/: README.MD
scripts/: check_variables_attributes.py  compare_variables_metadata.py  database_transformation.py  env.yml  export_dreq_lists_json.py  get_variables_metadata.py  workflow_example.py  workflow_example_2.py
scripts/examples/: requested_v1.0.json  requested_v1.0beta_all_opportunities.json  requested_v1.1.json  requested_v1.2.1.json  requested_v1.2.2.2_cmip6names.json  requested_v1.2.2_cmip6names.json  requested_v1.2.json  variables_v1.2.1.json  variables_v1.2.2.2_cmip6names.json  variables_v1.2.2.2_cmip7names.json  variables_v1.2.2_cmip6names.json  variables_v1.2.2_cmip7names.json  variables_v1.2.json
scripts/sandbox/: create_brand_name.py
scripts/variable_info/: all_var_info.json
tests/: test_data_request.py  test_dump_transformation.py  test_vocabulary_server.py  test_workflow.py
tests/test_datasets/: DR_dump.txt  DR_input.json  DR_output.json  VS_input.json  VS_input_noformat.json  VS_output.json  one_base_DR_dump.txt  one_base_DR_output.json  one_base_VS_output.json  one_base_input.json  one_base_output_transform.json  output_transform.json  several_bases_DR_output.json  several_bases_VS_output.json  several_bases_input.json  several_bases_output_format.json  several_bases_output_transform.json  several_bases_output_transform_to_one.json
(+61 files in other folders)
